Revision history for Mason-Plugin-HTMLFilters

** denotes an incompatible change

0.03  Feb 20, 2011

0.02  Feb 20, 2011

- Require Mason

0.01  Feb 16, 2011

- Initial version
