@@ -38,11 +38,11 @@ Formats a block of text into HTML paragraphs.  A sequence of two or more
 newlines is used as the delimiter for paragraphs which are then wrapped in HTML
 ""<p>""...""</p>"" tags. Taken from L<Template::Toolkit|Template>. e.g.
 
-    <% $.HTMLPara { %>
+    % $.HTMLPara {{
     First paragraph.
       
     Second paragraph.
-    </%>
+    % }}
     
 outputs:
 
@@ -59,17 +59,28 @@ outputs:
 Similar to HTMLPara above, but uses the HTML tag sequence "<br><br>" to join
 paragraphs. Taken from L<Template::Toolkit|Template>. e.g.
 
-    <% $.HTMLPara { %>
+    % $.HTMLPara {{
     First paragraph.
       
     Second paragraph.
-    </%>
+    % }}
     
 outputs:
 
     First paragraph.
     <br><br>
     Second paragraph.
+
+=item FillInForm ($form_data, %options)
+
+Uses L<HTML::FillInForm|HTML::FillInForm> to fill in the form with the
+specified I<$form_data> and I<%options>.
+
+    % $.FillInForm($form_data, target => 'form1') {{
+    ...
+    <form name='form1'>
+    ...
+    % }}
 
 =back
 
